css for components

--- a/my-fist-app/src/app/app.component.html
+++ b/my-fist-app/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-header></app-header>
+<app-header class="mb-3"></app-header>
+<div class="col-md-4 col-md-offset-1 bg-primary"></div>
+<div class="col-md-4 col-md-offset-1 bg-primary"></div>
